Páginas HTML de exemplo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Doramas Coreanos</title>
-    </head>
-    <body>
-        <h1>Olá, dorameiros!!!</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doramas Coreanos</title>
+</head>
+
+<body>
+
+    <ul>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="contato.html">Contato</a>
+        </li>
+    </ul>
+
+    <h1>Olá, dorameiros!!!</h1>
+
+    <p> Drama coreano ou nomeado também como K-drama, Telenovela sul-coreana ou Dorama. É a designação dada aos dramas
+        televisivos em língua coreana realizados pela Coreia do Sul.</p>
+    <p>
+        Diferentemente das novelas brasileiras, as histórias dos doramas giram em torno de um núcleo principal sem muito
+        desenvolvimento além disso. Essas histórias costumam ser fechadas em apenas uma temporada – ou seja,
+        não costumam durar anos e anos como outras produções, embora alguns doramas tenham mais de uma leva de
+        episódios.
+    </p>
+
+    <img src="assets/img/bannerdoramas.jpg" alt="imagemcomvariosdoramas">
+
+    <h2>15 MELHORES DORAMAS DE TODOS OS TEMPOS SEGUNDO OS FÃS:</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3Zn56ogLXS8" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+</body>
+
 </html>
